--- a/client/src/App.css
+++ b/client/src/App.css
@@ -7,6 +7,7 @@
 .form{
     display: flex;
     flex-direction: column;
+    
 }
 
 label{
@@ -24,4 +25,9 @@ label{
     padding: 30px;
     border-radius: 20px;
     margin: 3ch;
+}
+
+button {
+    margin-top: 10px;
+    width: 30%;
 }
