--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,33 +1,4 @@
-.App{
-    display: flex;
-    align-items: center;
-    flex-direction: column;
-}
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
 
-.form{
-    display: flex;
-    flex-direction: column;
-    
-}
-
-label{
-    width: 500px;
-}
-
-.completeDiv {
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-}
-
-.issueBox {
-    background-color: aqua;
-    padding: 30px;
-    border-radius: 20px;
-    margin: 3ch;
-}
-
-button {
-    margin-top: 10px;
-    width: 30%;
-}
